--- a/game.html
+++ b/game.html
@@ -5,18 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Psychic Game</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 <body>
 
+    <div class="game">
     <h1>The Psychic Game</h1>
     <h2>Guess What Letter I'm Thinking Of</h2>
+
+    <img src="images/tmg-article_default_mobile.jpg" alt="Psychic">
 
     <p id="wins">Wins:</p>
     <p id="losses">Loses:</p>
     <p id="guesses-left">Guesses Left:</p>
     <p id="your-guesses">Your Guesses so Far:</p>
 
-
-    <script type="text/javascript" src="psychic_game.js"> </script>
+</div>
+    <script type="text/javascript" src="game.js"> </script>
 </body>
 </html>
