still not working

--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
     <img src="images/tmg-article_default_mobile.jpg" alt="Psychic">
 
     <p id="wins">Wins:</p>
-    <p id="losses">Loses:</p>
+    <p id="losses">Losses:</p>
     <p id="guesses-left">Guesses Left:</p>
     <p id="your-guesses">Your Guesses so Far:</p>
 
